--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -79,6 +79,12 @@
     <Filter Include="pdfparser\document_reader\ipdfstream\xref_types">
       <UniqueIdentifier>{ec799d21-d17c-46df-8147-d7b17be513c2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\ipdffstream">
+      <UniqueIdentifier>{8d5bcd7c-7d44-459f-9830-58d51a6fca9d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\ipdfstringstream">
+      <UniqueIdentifier>{1c5e83bf-b49b-48ed-98f5-a6acb8ea0b20}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -174,17 +180,14 @@
     <ClInclude Include="pdfparser.contents_parser.hpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
     </ClInclude>
-    <ClInclude Include="pdfparser.document_reader.ipp">
-      <Filter>pdfparser\document_reader</Filter>
+    <ClInclude Include="pdfparser.ipdfstream.ipp">
+      <Filter>pdfparser\document_reader\ipdfstream</Filter>
     </ClInclude>
-    <ClInclude Include="pdfparser.page_tree_parser.ipp">
-      <Filter>pdfparser\document_reader\page_tree_parser</Filter>
+    <ClInclude Include="pdfparser.ipdffstream.hpp">
+      <Filter>pdfparser\document_reader\ipdfstream\ipdffstream</Filter>
     </ClInclude>
-    <ClInclude Include="pdfparser.page_parser.ipp">
-      <Filter>pdfparser\document_reader\page_tree_parser\page_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="pdfparser.contents_parser.ipp">
-      <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
+    <ClInclude Include="pdfparser.ipdfstringstream.hpp">
+      <Filter>pdfparser\document_reader\ipdfstream\ipdfstringstream</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -226,6 +229,36 @@
     </ClCompile>
     <ClCompile Include="pdfparser.pdfpage_builder.cpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\pdfpage_builder</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.ipdffstream.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\ipdffstream</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.object_pool.cpp">
+      <Filter>pdfparser\document_reader\object_pool</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.istream_extended.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.tokenizer.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\tokenizer</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.ipdfstream.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.page_tree_parser.cpp">
+      <Filter>pdfparser\document_reader\page_tree_parser</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.page_parser.cpp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.contents_parser.cpp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.document_reader.cpp">
+      <Filter>pdfparser\document_reader</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.ipdfstringstream.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\ipdfstringstream</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
