テスト修正&実行（成功）

--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
@@ -16,10 +16,10 @@
     <Filter Include="pdfparser\tokenizer">
       <UniqueIdentifier>{5fc1d187-fa9e-4889-81bc-6e8b85845a45}</UniqueIdentifier>
     </Filter>
-    <Filter Include="pdfparser\object_parser">
+    <Filter Include="pdfparser\ipdfstream">
       <UniqueIdentifier>{97fb2060-1ae8-4730-8c4d-a3c0600aa7f8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="pdfparser\object_parser\take_object_test">
+    <Filter Include="pdfparser\ipdfstream\take_object_test">
       <UniqueIdentifier>{9a6b326c-6d91-49d5-815c-0b29f7c2131e}</UniqueIdentifier>
     </Filter>
     <Filter Include="pdfparser\document_reader">
@@ -36,55 +36,55 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="take_footer_test.hpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClInclude>
     <ClInclude Include="take_indirect_object_test.hpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClInclude>
     <ClInclude Include="take_trailer_test.hpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClInclude>
     <ClInclude Include="take_xref_entry_test.hpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClInclude>
     <ClInclude Include="take_xref_table_test.hpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClInclude>
     <ClInclude Include="take_array_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_boolean_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_dictionary_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_hexadecimal_string_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_indirect_reference_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_integer_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_literal_string_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_name_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_null_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_real_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_stream_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="take_object_test.hpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="literal_trim.hpp">
       <Filter>pdfparser_test</Filter>
@@ -146,52 +146,52 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="take_indirect_object_test.cpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClCompile>
     <ClCompile Include="take_trailer_test.cpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClCompile>
     <ClCompile Include="take_xref_table_test.cpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClCompile>
     <ClCompile Include="take_stream_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_array_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_boolean_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_dictionary_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_hexadecimal_string_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_indirect_reference_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_integer_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_literal_string_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_name_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_null_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_real_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_object_test.cpp">
-      <Filter>pdfparser\object_parser\take_object_test</Filter>
+      <Filter>pdfparser\ipdfstream\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_footer_test.cpp">
-      <Filter>pdfparser\object_parser</Filter>
+      <Filter>pdfparser\ipdfstream</Filter>
     </ClCompile>
     <ClCompile Include="literal_trim.cpp">
       <Filter>pdfparser_test</Filter>
