--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -58,21 +58,6 @@
     <Filter Include="pdfparser\document_reader\ipdfstream\object_types">
       <UniqueIdentifier>{f13b5421-662f-4180-af25-5dc3776b75a2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="pdfparser\document_reader\ipdfstream\tokenizer">
-      <UniqueIdentifier>{980e1a15-2f06-4ebe-bf21-5c673b03abd5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_reader\ipdfstream\tokenizer\pdftoken">
-      <UniqueIdentifier>{2a6b0465-8233-4804-9579-a9203e9a9fda}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_reader\ipdfstream\tokenizer\istream_extended">
-      <UniqueIdentifier>{d495e982-6f00-4d6d-874c-acc91d14793f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_reader\ipdfstream\tokenizer\istream_extended\whitespace_flags">
-      <UniqueIdentifier>{94480dce-d7a4-4dfd-a0c6-37acacb08de7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_reader\ipdfstream\tokenizer\character_types">
-      <UniqueIdentifier>{3a1e4010-4cc7-4e6c-8d15-f7b655387d5e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="pdfparser\document_reader\ipdfstream\xref_types">
       <UniqueIdentifier>{ec799d21-d17c-46df-8147-d7b17be513c2}</UniqueIdentifier>
     </Filter>
@@ -84,6 +69,24 @@
     </Filter>
     <Filter Include="pdfparser\document_reader\object_cache">
       <UniqueIdentifier>{43153da4-ade5-4025-a85e-9fab6e828253}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream">
+      <UniqueIdentifier>{47c30b85-7446-488e-b4a9-6445d11a74c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream\tokenizer">
+      <UniqueIdentifier>{980e1a15-2f06-4ebe-bf21-5c673b03abd5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream\tokenizer\pdftoken">
+      <UniqueIdentifier>{2a6b0465-8233-4804-9579-a9203e9a9fda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended">
+      <UniqueIdentifier>{d495e982-6f00-4d6d-874c-acc91d14793f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended\whitespace_flags">
+      <UniqueIdentifier>{94480dce-d7a4-4dfd-a0c6-37acacb08de7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\ipdfstream\object_stream\tokenizer\character_types">
+      <UniqueIdentifier>{3a1e4010-4cc7-4e6c-8d15-f7b655387d5e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -103,31 +106,25 @@
       <Filter>pdfparser\document_reader\ipdfstream\xref_types</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.istream_extended.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.istream_extended_error.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.whitespace_flags.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended\whitespace_flags</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended\whitespace_flags</Filter>
     </ClInclude>
     <ClInclude Include="character_types.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\character_types</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\character_types</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.tokenizer.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.tokenize_error.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.pdftoken.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\pdftoken</Filter>
-    </ClInclude>
-    <ClInclude Include="pdfparser.parse_error.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream</Filter>
-    </ClInclude>
-    <ClInclude Include="pdfparser.object_not_found_error.hpp">
-      <Filter>pdfparser\document_reader\ipdfstream</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\pdftoken</Filter>
     </ClInclude>
     <ClInclude Include="type_traits_extended.hpp">
       <Filter>pdfparser</Filter>
@@ -180,14 +177,23 @@
     <ClInclude Include="pdfparser.contents_parser.hpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
     </ClInclude>
-    <ClInclude Include="pdfparser.ipdfstream.ipp">
-      <Filter>pdfparser\document_reader\ipdfstream</Filter>
-    </ClInclude>
     <ClInclude Include="pdfparser.ipdffstream.hpp">
       <Filter>pdfparser\document_reader\ipdfstream\ipdffstream</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.ipdfstringstream.hpp">
       <Filter>pdfparser\document_reader\ipdfstream\ipdfstringstream</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.object_stream.hpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.object_stream.ipp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.object_not_found_error.hpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.parse_error.hpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -201,19 +207,13 @@
       <Filter>pdfparser\document_reader\ipdfstream\xref_types</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.istream_extended_error.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.tokenize_error.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.pdftoken.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\pdftoken</Filter>
-    </ClCompile>
-    <ClCompile Include="pdfparser.parse_error.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream</Filter>
-    </ClCompile>
-    <ClCompile Include="pdfparser.object_not_found_error.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\pdftoken</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.space.cpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser\pdfcontents_builder\graphics_state_stack\graphics_state</Filter>
@@ -237,10 +237,10 @@
       <Filter>pdfparser\document_reader\object_cache</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.istream_extended.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer\istream_extended</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.tokenizer.cpp">
-      <Filter>pdfparser\document_reader\ipdfstream\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream\tokenizer</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.ipdfstream.cpp">
       <Filter>pdfparser\document_reader\ipdfstream</Filter>
@@ -259,6 +259,15 @@
     </ClCompile>
     <ClCompile Include="pdfparser.ipdfstringstream.cpp">
       <Filter>pdfparser\document_reader\ipdfstream\ipdfstringstream</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.object_stream.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.object_not_found_error.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.parse_error.cpp">
+      <Filter>pdfparser\document_reader\ipdfstream\object_stream</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
