--- a/PDFParser/PDFParser.vcxproj
+++ b/PDFParser/PDFParser.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="pdfparser.line_style.hpp" />
     <ClInclude Include="pdfparser.object_stream.hpp" />
     <ClInclude Include="pdfparser.object_stream.ipp" />
+    <ClInclude Include="pdfparser.object_types.ipp" />
     <ClInclude Include="pdfparser.page_parser.hpp" />
     <ClCompile Include="pdfparser.ipdfstringstream.cpp" />
     <ClCompile Include="pdfparser.object_stream.cpp" />
@@ -172,6 +173,8 @@
     <ClInclude Include="pdfparser.whitespace_flags.hpp" />
     <ClInclude Include="pdfparser.tokenizer.hpp" />
     <ClInclude Include="pdfparser.tokenize_error.hpp" />
+    <ClInclude Include="variant_cast.hpp" />
+    <ClInclude Include="variant_cast.ipp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
